--- a/cell.css
+++ b/cell.css
@@ -2,6 +2,8 @@
 	box-sizing: border-box;
 	font-family: sans-serif;
 	z-index: 10;
+	transition-property: left, top, transform;
+	transition-duration: .75s;
 }
 
 .screen {
