--- a/cell.css
+++ b/cell.css
@@ -72,6 +72,7 @@
 	display: flex;
 	width: fit-content;
 	margin-bottom: 10px;
+	font-family: sans-serif;
 }
 .dialogue.self {
 	align-self: flex-end;
