--- a/index.css
+++ b/index.css
@@ -11,11 +11,57 @@ html, body {
 }
 
 body {
-	background-color: lightgray;
+	background-color: #d3d8de;
+	transition-duration: 6s;
+	transition-property: background-color;
 }
 
 #game {
 	position: absolute;
 	left: 50%;
 	top: 50%;
+}
+
+#hover {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	pointer-events: none;
+	transition-duration: 2s;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#top, #bottom {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+#top {
+	justify-content: flex-end;
+	font-size: max(20vh, 80px);
+	font-family: "Edwardian Script ITC", serif;
+}
+
+#bottom {
+	justify-content: flex-start;
+	font-size: max(3vh, 16px);
+	line-height: max(5vh, 24px);
+	font-weight: bolder;
+	font-family: "Source Han Serif SC", "Simsun", serif;
+}
+
+#bottom *:first-child { margin-top: max(3vh, 16px); }
+
+#middle {
+	min-height: 200px;
+	height: 30vh;
+	width: 40vw;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
 }
